--- a/fridah-website.html
+++ b/fridah-website.html
@@ -4,6 +4,7 @@
   <title>My first webpage!</title>
     </head>
     <body>
-
+       <p> hello,world!</p>
+       <p> Welcome to my first webpage!</p>
     </body>
 </html>
