--- a/fridah-website.html
+++ b/fridah-website.html
@@ -8,5 +8,13 @@
         <h2>Written with a little guidance from Moringa school</h2>
        <p> hello,world!</p>
        <p> Welcome to my first webpage!</p>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>And a lot more!</li>
+    </ol>
+
+
     </body>
 </html>
