add link to another website

--- a/fridah-website.html
+++ b/fridah-website.html
@@ -7,14 +7,16 @@
         <h1>My first webpage</h1>
         <h2>Written with a little guidance from Moringa school</h2>
        <p> hello,world!</p>
-       <p> Welcome to my first webpage!</p>
+       <p> Welcome to my <strong>first webpage</strong>!</p>
+       <em>
     <ol>
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
         <li>And a lot more!</li>
     </ol>
-
-
+    </em>
+    <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+        <img src="Images/elephant.jpg" alt="A photo of a huge elephant">
     </body>
 </html>
